manifests/observability/victoria_metrics/network-policy/egress-to-cyphria.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmagent-to-cyphria-insights-api-access
  namespace: victoria-metrics
  annotations:
    kubernetes.io/description: allows vm to scrape cyphria insight api metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cyphria-backend
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
