manifests/observability/victoria_metrics/network-policy/egress-to-data.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmagent-to-postgres-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  egress:
    # Allow scraping postgres components
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: postgres
      toPorts:
        - ports:
            - port: "8080" # Operator metrics
              protocol: TCP
            - port: "9187" # Database metrics
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmagent-to-valkey-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: valkey
      toPorts:
        - ports:
            - port: "9121"
              protocol: TCP
