manifests/observability/victoria_metrics/network-policy/egress-to-grafana.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-to-grafana-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: vm-stack
  egress:
    - toFQDNs:
        - matchName: "grafana.com"
        - matchPattern: "*.grafana.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
