manifests/observability/victoria_metrics/network-policy/egress-to-host.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: victoria-metrics-operator-to-host-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: victoria-metrics-operator
  egress:
    # Allow host access
    - toEntities:
        - host

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-to-host-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: vm-stack
  egress:
    # Allow host access
    - toEntities:
        - host

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmsingle-to-host-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmsingle
  egress:
    # Allow host access
    - toEntities:
        - host

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-node-exporter-to-host-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-node-exporter
  egress:
    # Allow host access
    - toEntities:
        - host

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-state-metrics-to-host-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  egress:
    # Allow host access
    - toEntities:
        - host
