manifests/observability/victoria_metrics/network-policy/egress-to-kube-system.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmagent-to-kube-system-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  egress:
    # Allow Scraping Kube-DNS and Cilium/Hubble metrics
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "9153" # kube-dns metrics
              protocol: TCP
            - port: "4245" # Cilium envoy metrics (service mesh metrics)
              protocol: TCP
            - port: "9965" # hubble-metrics (cilium pods)
              protocol: TCP
            - port: "9966" # hubble-relay-metrics
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-node-exporter-to-kube-system-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-node-exporter
  egress:
    # Allow DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
