manifests/observability/victoria_metrics/network-policy/egress-to-messaging.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmagent-to-kafka-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  egress:
    # Allow Scraping KMinion
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kafka
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
