manifests/observability/victoria_metrics/network-policy/egress-to-networking.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmagent-to-cloudflare-tunnel-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  egress:
    # Allow scraping cloudflared
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "20241"
              protocol: TCP
