manifests/observability/victoria_metrics/network-policy/egress-to-platform.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmagent-to-cert-manager-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  egress:
    # Allow scraping cert manager
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cert-manager
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP
