manifests/observability/victoria_metrics/network-policy/ingress-from-host.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-from-host-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: vm-stack
  ingress:
    # Allow health checks from kubelet (host)
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmsingle-from-host-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmsingle
  ingress:
    # Allow health checks from kubelet (host)
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8428"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmagent-from-host-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  ingress:
    # Allow health checks from kubelet (host)
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8429"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-state-metrics-from-host-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  ingress:
    # Allow health checks from kubelet (host)
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
