manifests/observability/victoria_metrics/network-policy/ingress-from-vm-stack.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-from-vm-stack-access
  namespace: victoria-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: vm-stack
  ingress:
    # Allow scraping from within namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
